# LinkUp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  release_notes_v0.2.1.md  release_notes_v0.2.2.md  release_notes_v0.2.3.md  release_notes_v0.2.4.md  turnserver.conf
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  release.yml
docs/: CNAME  how-it-works.html  index.css  index.html  main.js
signaling-server/: package-lock.json  package.json  server.js
src/: index.css  index.html  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  input.rs  main.rs
