[package]
name = "linkup"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
base64 = "0.21"
lazy_static = "1.4"
tokio-tungstenite = "0.29.0"
futures-util = { version = "0.3.32", features = ["sink"] }
ureq = { version = "3.3.0", features = ["json"] }
rdev = "0.5.3"

[target.'cfg(target_os = "windows")'.dependencies]
dxgi-capture-rs = "1.2.2"
windows-sys = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = "2.0.0"
